tests/snapshots/snapshots__budget_dotenv_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (970 words)

CONTRIBUTING.md
     1→# Contributing …
    11→## Testing …
    19→## Code Style …
README-es.md
   607→##### path
   609→Default: `path.resolve(process.cwd(), '.env')`
   610→
      →…
   707→##### debug
   709→Default: `false`
   710→
      →…
   750→##### Debug
   752→Default: `false`
   753→
      →…
README.md
     1→# dotenv
     5→Dotenv is a zero-dependency module that loads environment variables from a `.env` file into [`process.env`](https://nodejs.org/docs/latest/api/process.html#process_process_env). Storing configuration in the environment separate from code is based on [The Twelve-Factor App](https://12factor.net/config) methodology.
     6→
      →…
    11→## Usage
    13→Install it.
    14→
      →…
    39→## Advanced
    43→Import with [ES6](#how-do-i-use-dotenv-with-import):
    44→
      →…
   319→## Agents
   323→> Software is changing, and dotenv must change with it—that is why I built [agentic secret storage (AS2)](https://dotenvx.com/as2). Agents run code without humans at terminals, so plaintext `.env` files are the wrong primitive.
   324→>
      →…
   331→### Quickstart
   333→Install vestauth and initialize your agent.
   334→
      →…
   357→## FAQ
   361→No.
   362→
      →…
   579→## Docs
   581→Dotenv exposes four functions:
   582→
      →…
   587→### Config
   589→`config` will read your `.env` file, parse the contents, assign it to
   590→[`process.env`](https://nodejs.org/docs/latest/api/process.html#process_process_env),
      →…
   605→#### Options
   607→##### path
   609→Default: `path.resolve(process.cwd(), '.env')`
   610→
   611→Specify a custom path if your file containing environment variables is located elsewhere.
   612→
   613→```js
   614→require('dotenv').config({ path: '/custom/path/to/.env' })
   615→```
   616→
   617→By default, `config` will look for a file called .env in the current working directory.
   618→
   619→Pass in multiple files as an array, and they will be parsed in order and combined with `process.env` (or `option.processEnv`, if set). The first value set for a variable will win, unless the `options.override` flag is set, in which case the last value set will win.  If a value already exists in `process.env` and the `options.override` flag is NOT set, no changes will be made to that value. 
   620→
   621→```js  
   622→require('dotenv').config({ path: ['.env.local', '.env'] })
   623→```
   624→
   625→##### quiet
   627→Default: `false`
   628→
      →…
   648→##### encoding
   650→Default: `utf8`
   651→
      →…
   658→##### debug
   660→Default: `false`
   661→
      →…
   668→##### override
   670→Default: `false`
   671→
      →…
   678→##### processEnv
   680→Default: `process.env`
   681→
      →…
   692→### Parse
   694→The engine which parses the contents of your file containing environment
   695→variables is available to use. It accepts a String or Buffer and will return
      →…
   705→#### Options
   707→##### debug
   709→Default: `false`
   710→
   711→Turn on logging to help debug why certain keys or values are not being set as you expect.
   712→
   713→```js
   714→const dotenv = require('dotenv')
   715→const buf = Buffer.from('hello world')
   716→const opt = { debug: true }
   717→const config = dotenv.parse(buf, opt)
   718→// expect a debug message because the buffer is not in KEY=VAL form
   719→```
   720→
   721→### Populate
   723→The engine which populates the contents of your .env file to `process.env` is available for use. It accepts a target, a source, and options. This is useful for power users who want to supply their own objects.
   724→
      →…
   748→#### options
   750→##### Debug
   752→Default: `false`
   753→
   754→Turn on logging to help debug why certain keys or values are not being populated as you expect.
   755→
   756→##### override
   758→Default: `false`
   759→
      →…
   764→## CHANGELOG
   766→See [CHANGELOG.md](CHANGELOG.md)
   767→
      →…
   770→## Who's using dotenv?
   772→[These npm modules depend on it.](https://www.npmjs.com/browse/depended/dotenv)
   773→
      →…
lib/cli-options.js
     1→const re = /^dotenv_config_(encoding|path|quiet|debug|override|DOTENV_KEY)=(.+)$/
lib/env-options.js
     2→const options = {}
lib/main.d.ts
     5→export interface DotenvParseOutput {
     6→  [name: string]: string;
     7→}
     9→export interface DotenvPopulateOutput {
    10→  [name: string]: string;
    11→}
    25→export interface DotenvConfigOptions {
    26→  /**
    27→   * Default: `path.resolve(process.cwd(), '.env')`
    28→   *
    29→   * Specify a custom path if your file containing environment variables is located elsewhere.
    30→   * Can also be an array of strings, specifying multiple paths.
    31→   *
    32→   * example: `require('dotenv').config({ path: '/custom/path/to/.env' })`
    33→   * example: `require('dotenv').config({ path: ['/path/to/first.env', '/path/to/second.env'] })`
    34→   */
    35→  path?: string | string[] | URL;
    36→
    37→  /**
    38→   * Default: `utf8`
    39→   *
    40→   * Specify the encoding of your file containing environment variables.
    41→   *
    42→   * example: `require('dotenv').config({ encoding: 'latin1' })`
    43→   */
    44→  encoding?: string;
    45→
    46→  /**
    47→   * Default: `false`
    48→   *
    49→   * Suppress all output (except errors).
    50→   *
    51→   * example: `require('dotenv').config({ quiet: true })`
    52→   */
    53→  quiet?: boolean;
    54→
    55→  /**
    56→   * Default: `false`
    57→   *
    58→   * Turn on logging to help debug why certain keys or values are not being set as you expect.
    59→   *
    60→   * example: `require('dotenv').config({ debug: process.env.DEBUG })`
    61→   */
    62→  debug?: boolean;
    63→
    64→  /**
    65→   * Default: `false`
    66→   *
      →…
    92→export interface DotenvConfigOutput {
    93→  error?: DotenvError;
    94→  parsed?: DotenvParseOutput;
    95→}
    97→type DotenvError = Error & {
    98→  code: 
    99→    | 'MISSING_DATA'
   100→    | 'INVALID_DOTENV_KEY'
   101→    | 'NOT_FOUND_DOTENV_ENVIRONMENT'
   102→    | 'DECRYPTION_FAILED'
   103→    | 'OBJECT_REQUIRED';
   104→}
   106→export interface DotenvPopulateOptions {
   107→  /**
   108→   * Default: `false`
   109→   *
   110→   * Turn on logging to help debug why certain keys or values are not being set as you expect.
   111→   *
   112→   * example: `require('dotenv').config({ debug: process.env.DEBUG })`
   113→   */
   114→  debug?: boolean;
   115→
   116→  /**
   117→   * Default: `false`
   118→   *
   119→   * Override any environment variables that have already been set on your machine with values from your .env file.
   120→   *
   121→   * example: `require('dotenv').config({ override: true })`
   122→   */
   123→  override?: boolean;
   124→}
   126→export interface DotenvPopulateInput {
   127→  [name: string]: string | undefined;
   128→}
lib/main.js
     7→const version = packageJson.version
    10→const TIPS = [
    11→  '🔐 encrypt with Dotenvx: https://dotenvx.com',
    12→  '🔐 prevent committing .env to code: https://dotenvx.com/precommit',
    13→  '🔐 prevent building .env in docker: https://dotenvx.com/prebuild',
    14→  '🤖 agentic secret storage: https://dotenvx.com/as2',
      →…
    27→function _getRandomTip () {
    31→function parseBoolean (value) {
    38→function supportsAnsi () {
    42→function dim (text) {
    46→const LINE = /(?:^|^)\s*(?:export\s+)?([\w.-]+)(?:\s*=\s*?|:\s+?)(\s*'(?:\\'|[^'])*'|\s*"(?:\\"|[^"])*"|\s*`(?:\\`|[^`])*`|[^#\r\n]+)?\s*(?:#.*)?(?:$|$)/mg
    49→function parse (src) {
    87→function _parseVault (options) {
   130→function _warn (message) {
   134→function _debug (message) {
   138→function _log (message) {
   142→function _dotenvKey (options) {
   157→function _instructions (result, dotenvKey) {
   200→function _vaultPath (options) {
   224→function _resolveHome (envPath) {
   228→function _configVault (options) {
   248→function configDotenv (options) {
   328→function config (options) {
   346→function decrypt (encrypted, keyStr) {
   378→function populate (processEnv, parsed, options = {}) {
   413→const DotenvModule = {
   414→  configDotenv,
   415→  _configVault,
   416→  _parseVault,
   417→  config,
      →…
