tests/snapshots/snapshots__budget_dotenv_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (2017 tokens)

CHANGELOG.md

CONTRIBUTING.md
     1→# Contributing
    11→## Testing
    19→## Code Style

README-es.md
     1→# dotenv

README.md
     1→# dotenv
     5→Dotenv is a zero-dependency module that loads environment variables from a `.env` file into [`process.env`](https://nodejs.org/docs/latest/api/process.html#process_process_env). Storing configuration in the environment separate from code is based on [The Twelve-Factor App](https://12factor.net/config) methodology.
     6→
     7→[Watch the tutorial](https://www.youtube.com/watch?v=YtkZR0NFd1g)
     8→
     9→&nbsp;
    10→
    11→## Usage
    13→Install it.
    14→
      →…
    39→## Advanced
    43→Import with [ES6](#how-do-i-use-dotenv-with-import):
    44→
      →…
   319→## Agents
   323→> Software is changing, and dotenv must change with it—that is why I built [agentic secret storage (AS2)](https://dotenvx.com/as2). Agents run code without humans at terminals, so plaintext `.env` files are the wrong primitive.
   324→>
      →…
   331→### Quickstart
   333→Install vestauth and initialize your agent.
   334→
      →…
   357→## FAQ
   361→No.
   362→
      →…
   579→## Docs
   581→Dotenv exposes four functions:
   582→
      →…
   587→### Config
   589→`config` will read your `.env` file, parse the contents, assign it to
   590→[`process.env`](https://nodejs.org/docs/latest/api/process.html#process_process_env),
      →…
   605→#### Options
   607→##### path
   625→##### quiet
   648→##### encoding
   658→##### debug
   668→##### override
   678→##### processEnv
   692→### Parse
   694→The engine which parses the contents of your file containing environment
   695→variables is available to use. It accepts a String or Buffer and will return
      →…
   705→#### Options
   707→##### debug
   721→### Populate
   723→The engine which populates the contents of your .env file to `process.env` is available for use. It accepts a target, a source, and options. This is useful for power users who want to supply their own objects.
   724→
      →…
   748→#### options
   750→##### Debug
   756→##### override
   764→## CHANGELOG
   766→See [CHANGELOG.md](CHANGELOG.md)
   767→
      →…
   770→## Who's using dotenv?
   772→[These npm modules depend on it.](https://www.npmjs.com/browse/depended/dotenv)
   773→
      →…

lib/cli-options.js
     1→const re …

lib/env-options.js
     2→const options …

lib/main.d.ts
     3→import type { URL } from 'url';
     5→export interface DotenvParseOutput {
     6→  [name: string]: string;
     7→}
     9→export interface DotenvPopulateOutput {
    10→  [name: string]: string;
    11→}
    25→export interface DotenvConfigOptions {
    26→  /**
    27→   * Default: `path.resolve(process.cwd(), '.env')`
    28→   *
    29→   * Specify a custom path if your file containing environment variables is located elsewhere.
    30→   * Can also be an array of strings, specifying multiple paths.
    31→   *
    32→   * example: `require('dotenv').config({ path: '/custom/path/to/.env' })`
    33→   * example: `require('dotenv').config({ path: ['/path/to/first.env', '/path/to/second.env'] })`
    34→   */
    35→  path?: string | string[] | URL;
    36→
    37→  /**
    38→   * Default: `utf8`
    39→   *
    40→   * Specify the encoding of your file containing environment variables.
    41→   *
    42→   * example: `require('dotenv').config({ encoding: 'latin1' })`
    43→   */
    44→  encoding?: string;
    45→
    46→  /**
    47→   * Default: `false`
    48→   *
    49→   * Suppress all output (except errors).
    50→   *
    51→   * example: `require('dotenv').config({ quiet: true })`
    52→   */
    53→  quiet?: boolean;
    54→
    55→  /**
    56→   * Default: `false`
    57→   *
      →…
    92→export interface DotenvConfigOutput {
    93→  error?: DotenvError;
    94→  parsed?: DotenvParseOutput;
    95→}
    97→type DotenvError = Error & {
   106→export interface DotenvPopulateOptions {
   107→  /**
   108→   * Default: `false`
   109→   *
   110→   * Turn on logging to help debug why certain keys or values are not being set as you expect.
   111→   *
   112→   * example: `require('dotenv').config({ debug: process.env.DEBUG })`
   113→   */
   114→  debug?: boolean;
   115→
   116→  /**
   117→   * Default: `false`
   118→   *
   119→   * Override any environment variables that have already been set on your machine with values from your .env file.
   120→   *
   121→   * example: `require('dotenv').config({ override: true })`
   122→   */
   123→  override?: boolean;
   124→}
   126→export interface DotenvPopulateInput {
   127→  [name: string]: string | undefined;
   128→}

lib/main.js
     7→const version …
    10→const TIPS …
    27→function _getRandomTip () {
    31→function parseBoolean (value) {
    38→function supportsAnsi () {
    42→function dim (text) {
    46→const LINE …
    49→function parse (src) {
    87→function _parseVault (options) {
   130→function _warn (message) {
   134→function _debug (message) {
   138→function _log (message) {
   142→function _dotenvKey (options) {
   157→function _instructions (result, dotenvKey) {
   200→function _vaultPath (options) {
   224→function _resolveHome (envPath) {
   228→function _configVault (options) {
   248→function configDotenv (options) {
   328→function config (options) {
   346→function decrypt (encrypted, keyStr) {
   378→function populate (processEnv, parsed, options = {}) {
   413→const DotenvModule …

package.json
     2→  "name": "dotenv",
     3→  "version": "17.3.1",
     4→  "description": "Loads environment variables from .env file",
     5→  "main": "lib/main.js",
     6→  "types": "lib/main.d.ts",
     7→  "exports": {
    20→  },
    21→  "scripts": {
    29→  },
    30→  "repository": {
    33→  },
    34→  "homepage": "https://github.com/motdotla/dotenv#readme",
    35→  "funding": "https://dotenvx.com",
    36→  "keywords": [
    44→  ],
    45→  "readmeFilename": "README.md",
    46→  "license": "BSD-2-Clause",
    47→  "devDependencies": {
    55→  },
    56→  "engines": {
    58→  },
    59→  "browser": {
    61→  }
    62→}

tests/types/test.ts
     1→import { config, parse } from "dotenv";

tests/types/tsconfig.json
     2→  "compilerOptions": {
    15→  },
    16→  "include": ["./test.ts", "../../main.d.ts"]
    17→}
