tests/snapshots/snapshots__budget_dotenv_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4037 tokens)

CHANGELOG.md
     1→# Changelog
     3→All notable changes to this project will be documented in this file. See [standard-version](https://github.com/conventional-changelog/standard-version) for commit guidelines.
     4→
   484→# [8.0.0](https://github.com/motdotla/dotenv/compare/v7.0.0...v8.0.0) (2019-05-02)

CONTRIBUTING.md
     1→# Contributing
     3→1. [Fork it](https://help.github.com/articles/fork-a-repo/)
     4→2. Install dependencies (`npm install`)
     5→3. Create your feature branch (`git checkout -b my-new-feature`)
     6→4. Commit your changes (`git commit -am 'Added some feature'`)
      →…
    11→## Testing
    19→## Code Style

README-es.md
     1→# dotenv
     5→Dotenv is a zero-dependency module that loads environment variables from a `.env` file into [`process.env`](https://nodejs.org/docs/latest/api/process.html#process_process_env). Storing configuration in the environment separate from code is based on [The Twelve-Factor App](https://12factor.net/config) methodology.
     6→
     7→[Watch the tutorial](https://www.youtube.com/watch?v=YtkZR0NFd1g)
     8→
     9→&nbsp;
    10→
    11→## Usage
    39→## Advanced
   319→## Agentes
   331→### Inicio rápido
   357→## FAQ
   579→## Docs
   587→### Config
   605→#### Options
   692→### Parse
   705→#### Options
   721→### Populate
   748→#### options
   764→## CHANGELOG
   770→## Who's using dotenv?

README.md
     1→# dotenv
     5→Dotenv is a zero-dependency module that loads environment variables from a `.env` file into [`process.env`](https://nodejs.org/docs/latest/api/process.html#process_process_env). Storing configuration in the environment separate from code is based on [The Twelve-Factor App](https://12factor.net/config) methodology.
     6→
     7→[Watch the tutorial](https://www.youtube.com/watch?v=YtkZR0NFd1g)
     8→
     9→&nbsp;
    10→
    11→## Usage
    13→Install it.
    14→
    15→```sh
    16→npm install dotenv --save
    17→```
    18→
    19→Create a `.env` file in the root of your project:
    20→
    21→```ini
    22→# .env
    23→S3_BUCKET="YOURS3BUCKET"
    24→SECRET_KEY="YOURSECRETKEYGOESHERE"
      →…
    39→## Advanced
    43→Import with [ES6](#how-do-i-use-dotenv-with-import):
    44→
    45→```javascript
    46→import 'dotenv/config'
    47→```
    48→
    49→ES6 import if you need to set config options:
    50→
    51→```javascript
    52→import dotenv from 'dotenv'
    53→dotenv.config({ path: '/custom/path/to/.env' })
    54→```
      →…
   319→## Agents
   323→> Software is changing, and dotenv must change with it—that is why I built [agentic secret storage (AS2)](https://dotenvx.com/as2). Agents run code without humans at terminals, so plaintext `.env` files are the wrong primitive.
   324→>
   325→> AS2 is built for autonomous software: encrypted by default, zero console access, and cryptography‑first delivery that keeps operators out of the loop.
   326→>
   327→> It is backed by [Vestauth](https://github.com/vestauth/vestauth), the trusted, pioneering auth layer for agents—giving each agent a cryptographic identity so requests are signed with private keys and verified with public keys. No shared secrets to leak.
   328→>
   329→> It's what I'm using now. - [motdotla](https://mot.la)
   330→
   331→### Quickstart
   333→Install vestauth and initialize your agent.
   334→
   335→```bash
   336→npm i -g vestauth
   337→
   338→vestauth agent init
   339→```
   340→
      →…
   357→## FAQ
   361→No.
   362→
   363→Unless you encrypt it with [dotenvx](https://github.com/dotenvx/dotenvx). Then we recommend you do.
   364→
   365→</details>
   366→<details><summary>What about variable expansion?</summary><br/>
   367→
   368→Use [dotenvx](https://github.com/dotenvx/dotenvx).
   369→
   370→</details>
   371→<details><summary>Should I have multiple `.env` files?</summary><br/>
   372→
      →…
   579→## Docs
   581→Dotenv exposes four functions:
   582→
   583→* `config`
   584→* `parse`
   585→* `populate`
   586→
   587→### Config
   589→`config` will read your `.env` file, parse the contents, assign it to
   590→[`process.env`](https://nodejs.org/docs/latest/api/process.html#process_process_env),
   591→and return an Object with a `parsed` key containing the loaded content or an `error` key if it failed.
   592→
   593→```js
   594→const result = dotenv.config()
   595→
   596→if (result.error) {
      →…
   605→#### Options
   607→##### path
   609→Default: `path.resolve(process.cwd(), '.env')`
   610→
      →…
   625→##### quiet
   627→Default: `false`
   628→
      →…
   648→##### encoding
   650→Default: `utf8`
   651→
      →…
   658→##### debug
   660→Default: `false`
   661→
      →…
   668→##### override
   670→Default: `false`
   671→
      →…
   678→##### processEnv
   680→Default: `process.env`
   681→
      →…
   692→### Parse
   694→The engine which parses the contents of your file containing environment
   695→variables is available to use. It accepts a String or Buffer and will return
   696→an Object with the parsed keys and values.
   697→
   698→```js
   699→const dotenv = require('dotenv')
   700→const buf = Buffer.from('BASIC=basic')
   701→const config = dotenv.parse(buf) // will return an object
      →…
   705→#### Options
   707→##### debug
   709→Default: `false`
   710→
      →…
   721→### Populate
   723→The engine which populates the contents of your .env file to `process.env` is available for use. It accepts a target, a source, and options. This is useful for power users who want to supply their own objects.
   724→
   725→For example, customizing the source:
   726→
   727→```js
   728→const dotenv = require('dotenv')
   729→const parsed = { HELLO: 'world' }
   730→
      →…
   748→#### options
   750→##### Debug
   752→Default: `false`
   753→
      →…
   756→##### override
   758→Default: `false`
   759→
      →…
   764→## CHANGELOG
   766→See [CHANGELOG.md](CHANGELOG.md)
   767→
   768→&nbsp;
   769→
   770→## Who's using dotenv?
   772→[These npm modules depend on it.](https://www.npmjs.com/browse/depended/dotenv)
   773→
   774→Projects that expand it often use the [keyword "dotenv" on npm](https://www.npmjs.com/search?q=keywords:dotenv).

lib/cli-options.js
     1→const re = /^dotenv_config_(encoding|path|quiet|debug|override|DOTENV_KEY)=(.+)$/

lib/env-options.js
     2→const options = {}

lib/main.d.ts
     3→import type { URL } from 'url';
     5→export interface DotenvParseOutput {
     6→  [name: string]: string;
     7→}
     9→export interface DotenvPopulateOutput {
    10→  [name: string]: string;
    11→}
    25→export interface DotenvConfigOptions {
    26→  /**
    27→   * Default: `path.resolve(process.cwd(), '.env')`
    28→   *
    29→   * Specify a custom path if your file containing environment variables is located elsewhere.
    30→   * Can also be an array of strings, specifying multiple paths.
    31→   *
    32→   * example: `require('dotenv').config({ path: '/custom/path/to/.env' })`
    33→   * example: `require('dotenv').config({ path: ['/path/to/first.env', '/path/to/second.env'] })`
    34→   */
    35→  path?: string | string[] | URL;
    36→
    37→  /**
    38→   * Default: `utf8`
    39→   *
    40→   * Specify the encoding of your file containing environment variables.
    41→   *
    42→   * example: `require('dotenv').config({ encoding: 'latin1' })`
    43→   */
    44→  encoding?: string;
    45→
    46→  /**
    47→   * Default: `false`
    48→   *
    49→   * Suppress all output (except errors).
    50→   *
    51→   * example: `require('dotenv').config({ quiet: true })`
    52→   */
    53→  quiet?: boolean;
    54→
    55→  /**
    56→   * Default: `false`
    57→   *
    58→   * Turn on logging to help debug why certain keys or values are not being set as you expect.
    59→   *
    60→   * example: `require('dotenv').config({ debug: process.env.DEBUG })`
    61→   */
    62→  debug?: boolean;
    63→
    64→  /**
    65→   * Default: `false`
    66→   *
    67→   * Override any environment variables that have already been set on your machine with values from your .env file.
    68→   *
    69→   * example: `require('dotenv').config({ override: true })`
    70→   */
    71→  override?: boolean;
    72→
    73→  /**
    74→   * Default: `process.env`
    75→   *
    76→   * Specify an object to write your secrets to. Defaults to process.env environment variables.
    77→   *
    78→   * example: `const processEnv = {}; require('dotenv').config({ processEnv: processEnv })`
    79→   */
    80→  processEnv?: DotenvPopulateInput;
    81→
    82→  /**
    83→   * Default: `undefined`
    84→   *
      →   …
    92→export interface DotenvConfigOutput {
    93→  error?: DotenvError;
    94→  parsed?: DotenvParseOutput;
    95→}
    97→type DotenvError = Error & {
    98→  code: 
      →  …
   106→export interface DotenvPopulateOptions {
   107→  /**
   108→   * Default: `false`
   109→   *
   110→   * Turn on logging to help debug why certain keys or values are not being set as you expect.
   111→   *
   112→   * example: `require('dotenv').config({ debug: process.env.DEBUG })`
   113→   */
   114→  debug?: boolean;
   115→
   116→  /**
   117→   * Default: `false`
   118→   *
   119→   * Override any environment variables that have already been set on your machine with values from your .env file.
   120→   *
   121→   * example: `require('dotenv').config({ override: true })`
   122→   */
   123→  override?: boolean;
   124→}
   126→export interface DotenvPopulateInput {
   127→  [name: string]: string | undefined;
   128→}

lib/main.js
     7→const version = packageJson.version
    10→const TIPS = [
    27→function _getRandomTip () {
    31→function parseBoolean (value) {
    38→function supportsAnsi () {
    42→function dim (text) {
    46→const LINE = /(?:^|^)\s*(?:export\s+)?([\w.-]+)(?:\s*=\s*?|:\s+?)(\s*'(?:\\'|[^'])*'|\s*"(?:\\"|[^"])*"|\s*`(?:\\`|[^`])*`|[^#\r\n]+)?\s*(?:#.*)?(?:$|$)/mg
    49→function parse (src) {
    87→function _parseVault (options) {
   130→function _warn (message) {
   134→function _debug (message) {
   138→function _log (message) {
   142→function _dotenvKey (options) {
   157→function _instructions (result, dotenvKey) {
   200→function _vaultPath (options) {
   224→function _resolveHome (envPath) {
   228→function _configVault (options) {
   248→function configDotenv (options) {
   328→function config (options) {
   346→function decrypt (encrypted, keyStr) {
   378→function populate (processEnv, parsed, options = {}) {
   413→const DotenvModule = {

package.json
     2→  "name": "dotenv",
     3→  "version": "17.3.1",
     4→  "description": "Loads environment variables from .env file",
     5→  "main": "lib/main.js",
     6→  "types": "lib/main.d.ts",
     7→  "exports": {
    20→  },
    21→  "scripts": {
    29→  },
    30→  "repository": {
    33→  },
    34→  "homepage": "https://github.com/motdotla/dotenv#readme",
    35→  "funding": "https://dotenvx.com",
    36→  "keywords": [
    44→  ],
    45→  "readmeFilename": "README.md",
    46→  "license": "BSD-2-Clause",
    47→  "devDependencies": {
    55→  },
    56→  "engines": {
    58→  },
    59→  "browser": {
    61→  }
    62→}

tests/test-config-cli.js
     6→function spawn (cmd, options = {}) {

tests/test-config-vault.js
     8→const testPath …
    10→const dotenvKey …

tests/test-env-options.js
     8→const e …
     9→const p …
    10→const q …
    11→const d …
    12→const o …
    13→const dk …
    16→function options () {
    21→function testOption (envVar, tmpVal, expect) {

tests/test-parse-multiline.js
     6→const parsed …
    50→const multiPem …
    59→const payload …
    62→const expectedPayload …
    64→const RPayload …
    67→const NPayload …
    70→const RNPayload …

tests/test-parse.js
     6→const parsed …
    82→const payload …
    85→const duplicate …
    88→const expectedPayload …
    90→const RPayload …
    93→const NPayload …
    96→const RNPayload …

tests/test-populate.js
     8→const mockParseResponse = { test: 'foo' }

tests/types/test.ts
     1→import { config, parse } from "dotenv";
     3→const env …
     4→const dbUrl …
    15→const parsed …
    16→const dbHost …
    18→const parsedFromBuffer …
    19→const justice …

tests/types/tsconfig.json
     2→  "compilerOptions": {
    15→  },
    16→  "include": ["./test.ts", "../../main.d.ts"]
    17→}
