tests/snapshots/snapshots__budget_dotenv_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (474 words)

CHANGELOG.md
     1→# Changelog
     3→All notable changes to this project will be documented in this file. See [standard-version](https://github.com/conventional-changelog/standard-version) for commit guidelines.
     4→
     7→## [17.3.1](https://github.com/motdotla/dotenv/compare/v17.3.0...v17.3.1) (2026-02-12) …
   484→# [8.0.0](https://github.com/motdotla/dotenv/compare/v7.0.0...v8.0.0) (2019-05-02)
CONTRIBUTING.md
     1→# Contributing
     3→1. [Fork it](https://help.github.com/articles/fork-a-repo/)
     4→2. Install dependencies (`npm install`)
      →…
    11→## Testing …
    19→## Code Style …
README-es.md
     1→# dotenv …
   331→### Inicio rápido …
   587→### Config …
   607→##### path …
   692→### Parse …
   707→##### debug …
   721→### Populate …
   750→##### Debug …
README.md
     1→# dotenv
     5→Dotenv is a zero-dependency module that loads environment variables from a `.env` file into [`process.env`](https://nodejs.org/docs/latest/api/process.html#process_process_env). Storing configuration in the environment separate from code is based on [The Twelve-Factor App](https://12factor.net/config) methodology.
     6→
     7→[Watch the tutorial](https://www.youtube.com/watch?v=YtkZR0NFd1g)
     8→
     9→&nbsp;
    10→
    11→## Usage
    13→Install it.
    14→
      →…
    39→## Advanced
    43→Import with [ES6](#how-do-i-use-dotenv-with-import):
    44→
      →…
   319→## Agents
   323→> Software is changing, and dotenv must change with it—that is why I built [agentic secret storage (AS2)](https://dotenvx.com/as2). Agents run code without humans at terminals, so plaintext `.env` files are the wrong primitive.
   324→>
      →…
   331→### Quickstart …
   357→## FAQ
   361→No.
   362→
      →…
   579→## Docs
   581→Dotenv exposes four functions:
   582→
      →…
   587→### Config …
   605→#### Options …
   607→##### path
   609→Default: `path.resolve(process.cwd(), '.env')`
   610→
   611→Specify a custom path if your file containing environment variables is located elsewhere.
   612→
   613→```js
   614→require('dotenv').config({ path: '/custom/path/to/.env' })
   615→```
   616→
      →…
   625→##### quiet
   627→Default: `false`
   628→
      →…
   648→##### encoding
   650→Default: `utf8`
   651→
      →…
   658→##### debug
   660→Default: `false`
   661→
      →…
   668→##### override
   670→Default: `false`
   671→
      →…
   678→##### processEnv
   680→Default: `process.env`
   681→
      →…
   692→### Parse …
   705→#### Options …
   707→##### debug
   709→Default: `false`
   710→
   711→Turn on logging to help debug why certain keys or values are not being set as you expect.
   712→
   713→```js
   714→const dotenv = require('dotenv')
   715→const buf = Buffer.from('hello world')
   716→const opt = { debug: true }
      →…
   721→### Populate …
   748→#### options …
   750→##### Debug
   752→Default: `false`
   753→
   754→Turn on logging to help debug why certain keys or values are not being populated as you expect.
   755→
   756→##### override
   758→Default: `false`
   759→
      →…
   764→## CHANGELOG
   766→See [CHANGELOG.md](CHANGELOG.md)
   767→
      →…
   770→## Who's using dotenv?
   772→[These npm modules depend on it.](https://www.npmjs.com/browse/depended/dotenv)
   773→
      →…
lib/cli-options.js
     1→const re = /^dotenv_config_(encoding|path|quiet|debug|override|DOTENV_KEY)=(.+)$/
lib/env-options.js
     2→const options = {}
lib/main.d.ts
     5→export interface DotenvParseOutput {
     6→  [name: string]: string;
     7→}
     9→export interface DotenvPopulateOutput {
    10→  [name: string]: string;
    11→}
    25→export interface DotenvConfigOptions {
    26→  /**
    27→   * Default: `path.resolve(process.cwd(), '.env')`
    28→   *
      →…
    92→export interface DotenvConfigOutput {
    93→  error?: DotenvError;
    94→  parsed?: DotenvParseOutput;
    95→}
    97→type DotenvError = Error & {
    98→  code: 
    99→    | 'MISSING_DATA'
   100→    | 'INVALID_DOTENV_KEY'
   101→    | 'NOT_FOUND_DOTENV_ENVIRONMENT'
   102→    | 'DECRYPTION_FAILED'
   103→    | 'OBJECT_REQUIRED';
   104→}
   106→export interface DotenvPopulateOptions {
   107→  /**
   108→   * Default: `false`
   109→   *
      →…
   126→export interface DotenvPopulateInput {
   127→  [name: string]: string | undefined;
   128→}
lib/main.js
     7→const version = packageJson.version
    10→const TIPS = [
    11→  '🔐 encrypt with Dotenvx: https://dotenvx.com',
      →…
    46→const LINE = /(?:^|^)\s*(?:export\s+)?([\w.-]+)(?:\s*=\s*?|:\s+?)(\s*'(?:\\'|[^'])*'|\s*"(?:\\"|[^"])*"|\s*`(?:\\`|[^`])*`|[^#\r\n]+)?\s*(?:#.*)?(?:$|$)/mg
   413→const DotenvModule = {
   414→  configDotenv,
      →…
