tests/snapshots/snapshots__budget_dotenv_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 3 → level 0 (4 words)

cli-options.js
env-options.js
main.d.ts
main.js
