tests/snapshots/snapshots__budget_dotenv_level1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 80 → level 2 (78 words)

cli-options.js
     1→const re
env-options.js
     2→const options
main.d.ts
     5→export interface DotenvParseOutput {
     9→export interface DotenvPopulateOutput {
    25→export interface DotenvConfigOptions {
    92→export interface DotenvConfigOutput {
    97→type DotenvError
   106→export interface DotenvPopulateOptions {
   126→export interface DotenvPopulateInput {
main.js
     7→const version
    10→const TIPS
    27→function _getRandomTip
    31→function parseBoolean
    38→function supportsAnsi
    42→function dim
    46→const LINE
    49→function parse
    87→function _parseVault
   130→function _warn
   134→function _debug
   138→function _log
   142→function _dotenvKey
   157→function _instructions
   200→function _vaultPath
   224→function _resolveHome
   228→function _configVault
   248→function configDotenv
   328→function config
   346→function decrypt
   378→function populate
   413→const DotenvModule
